# ace-sdk-py

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
ace/: __init__.py  _utils.py  discovery.py  encryption.py  identity.py  messages.py  security.py  signing.py  state_machine.py  types.py
tests/: test_discovery.py  test_encryption.py  test_identity.py  test_integration.py  test_interop_fixtures.py  test_messages.py  test_profile.py  test_protocol_vectors.py  test_security.py  test_security_hardening.py  test_signing.py  test_state_machine.py  test_types.py
